# autoreviewerccode

./: AGENTS.md  README.md  evaluation_criteria.csv  generated_rubric.json  pyproject.toml
.ipynb_checkpoints/: Exam_Description-checkpoint.txt  evaluation_improved-checkpoint.json  exam_reviewer-checkpoint.py
IP1_RUB/: rubrica_max.json  rubrica_modular.json
config/: pyproject.toml
criteria/OLD/: evaluation.json
criteria/OLD_IP1/: rubrica_base.json  rubrica_funcion.json  rubrica_main.json  rubrica_max-P1.json  rubrica_max-P2.json
docs/: INSTRUCTIONS.md
evaluations/: Assignment 1 Exam_agustin.brito_intento_2026-03-05-10-33-25_Examp2_evaluation.json  asier_ex_evaluation.json  daniel_exam1_2026_1_evaluation.json
scripts/: exam_reviewer.py  quick_test.py  review_exams.py  test_exam_reviewer.py  test_full_pipeline.py
scripts/OLD/: exam_reviewer.py  main.py  test_api_simple.py  test_single_review.py
src/cexam_grader/: __init__.py  cli.py  exam_analyzer.py  rubric_generator.py
src/cexams/: __main__.py
src/cexams/api/: client.py
src/cexams/core/: reviewer.py
src/cexams/models/: criteria.py
tests/: test_api_client.py  test_imports.py  test_models.py
web_interface/: app.py  config.py  requirements.txt
web_interface/api/: evaluator.py
web_interface/routes/: api.py  main.py
web_interface/services/: __init__.py
web_interface/templates/: base.html  criteria_editor.html  criteria_list.html  exam_view.html  exams.html  index.html  review_detail.html  reviewer.html  reviews.html  run_review.html
